--- a/style.css
+++ b/style.css
@@ -2,52 +2,58 @@
     margin:0;
     box-sizing: border-box;
     font-family: sans-serif;
-    padding-left: 5%;
+    padding-left: 2%;
 }
 
 
-header{
-    background-image: url(citrus.jpeg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-    width: 1100px;
-    height: 400px;
-    padding-top: 2%;
-    padding-left: 7%;
-    z-index: -1;
-    }
+.header{
+    background-color: green;
+    width: 100%;
+    height: 90%;
+}    
 
 ul{
+    width: 100%;
     display:flex;
     justify-content: space-evenly;
     list-style: none;
-    background-color: rgb(248, 248, 66);
-    padding: 15px;
-    margin-right: 60px;
-    margin-bottom: 100px;
+    background-color: black;
+    padding: 8px ;
+    margin: 0;
+    
     color:white;
     letter-spacing: 1px;
     font-weight: 10px;
+    
 }
+
 
 
 h1{
     z-index: 1;
-    padding-left: 40%;
-    padding-top: 10%;
+    padding-left: 50%;
+    padding-top: 4%;
     font-size: 150px;
     color:white;
         
         
 }
     
-
-ul li{
-    color: green
+li{
+    
+    text-align: center;
+    border-right: 1px solid white;
+    padding: 8px;
     
 }
+
+li a{ 
+    display:block;
+    text-align: center;
+    text-decoration: none;
+
+}
+
 
 .navbar ul li:hover{
     transform: scale(1.1);
@@ -62,11 +68,18 @@ body{
 
 a{
     text-decoration: none ;
+    color: white;
+}
+
+main{
+    width: 100%;
+    height: 30%;
+    background-color: greenyellow;
 }
 
 video{
     margin: 2%;
-    padding-left:1%;
+    padding-left:14%;
     z-index: -1;
     width: 100%;
     height: 30%;
@@ -80,8 +93,8 @@ p{
     margin: 2%;
     text-align: center;
     z-index: 1;
-    color:rgb(63, 136, 63);
-    padding-left: 1px;
+    color:rgb(90, 89, 89);
+    padding-left: 14%;
     padding-right: 18%;
     padding-bottom: 10%;
     letter-spacing: 1px;
@@ -89,11 +102,15 @@ p{
 }
 
 .footer{
-    margin:2%;
-    color:rgb(63, 136, 63);
+    
+    color:rgb(90, 89, 89);
     font-size: 15px;
-    padding-left: 14%;
+    padding-left: 17%;
+    padding-bottom: 1%;
     letter-spacing: 1px;
+    width: 100%;
+    height: 100%;
+    
 }
 
 
@@ -106,11 +123,12 @@ form {  width: 450px;
         background-color: rgb(197, 193, 193);
         font-size: 15px;
         border-radius: 14px;
-        border-color: white;
-        margin-left: 20%;
+        border: 2px solid white;
+        box-shadow: 5px 8px 12px white;
+        margin-left: 40%;
         margin-right: 60%;
-        padding-top: 3%;
-        margin-top: 3%; 
+        padding: 4%;
+        margin: 3%; 
         
     }
 
@@ -121,6 +139,7 @@ form input{
     border-radius: 12px;
     border-color: white;
     padding: 4px;
+    padding-left: 2%;
     
     
 } 
@@ -128,15 +147,17 @@ form input{
 form textarea{
     border-radius: 12px;
     border-color: white;
-    margin-left: 6%;
+    margin-left: 4%;
     margin-top: 3%;
+    padding-left: 0.5%;
+    color:white;
 }
 
 
     
-form:hover{
-    transform:scale(1.1)
-}   
+
+
+
 
 
 
